Bug 1180549 - Fix a startup crash when using the clang-plugin with clang>3.5; r=mystor

We were de-referencing the checker variable after having moved it into
the array, which was causing a null pointer crash.

With this fixed, the plugin can be built with more recent versions of
clang.